Bug 44855 - Claim that echo@bot.talk.google.com doesn't support audio/video
Summary: Claim that echo@bot.talk.google.com doesn't support audio/video
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: gabble (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-17 03:38 UTC by Guillaume Desmottes
Modified: 2012-02-21 03:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
presence-cache: hardcode gtalk's bot caps (1.22 KB, patch)
2012-01-18 06:23 UTC, Guillaume Desmottes
Details | Splinter Review

Description Guillaume Desmottes 2012-01-17 03:38:24 UTC
Original bug: https://bugzilla.gnome.org/show_bug.cgi?id=667472

Looks like Google has its own echo bot: echo@bot.talk.google.com
Calling it from the gmail web interface works just fine but Telepathy claims it doesn't support audio/video.

Capabilities:
{49L: [({u'org.freedesktop.Telepathy.Channel.ChannelType': u'org.freedesktop.Telepathy.Channel.Type.Text',
         u'org.freedesktop.Telepathy.Channel.TargetHandleType': 1L},
        [u'org.freedesktop.Telepathy.Channel.TargetHandle'])]}


On the XMPP front:

<presence from="echo@bot.talk.google.com/bot" to="guillaume.desmottes@gmail.com/cb11d944"><caps:c node="http://talk.google.com/xmpp/bot/caps" ver="1.0" ext="voice-v1 video-v1 camera-v1" xmlns:caps="http://jabber.org/protocol/caps"/></presence>


<iq type="error" to="guillaume.desmottes@gmail.com/cb11d944" id="282844807664" from="echo@bot.talk.google.com/bot"><query node="http://talk.google.com/xmpp/bot/caps#camera-v1" xmlns="http://jabber.org/protocol/disco#info"/><error code="501" type="cancel"><feature-not-implemented xmlns="urn:ietf:params:xml:ns:xmpp-stanzas"/></error></iq>
wocky-DEBUG: _end_element_ns: Received stanza
* iq xmlns='jabber:client' type='error' to='guillaume.desmottes@gmail.com/cb11d944' id='282844807664' from='echo@bot.talk.google.com/bot'
    * query xmlns='http://jabber.org/protocol/disco#info' node='http://talk.google.com/xmpp/bot/caps#camera-v1'
    * error code='501' type='cancel'
        * feature-not-implemented xmlns='urn:ietf:params:xml:ns:xmpp-stanzas'


* iq xmlns='jabber:client' type='error' to='guillaume.desmottes@gmail.com/cb11d944' id='283092808390' from='echo@bot.talk.google.com/bot'
    * query xmlns='http://jabber.org/protocol/disco#info' node='http://talk.google.com/xmpp/bot/caps#voice-v1'
    * error code='501' type='cancel'
        * feature-not-implemented xmlns='urn:ietf:params:xml:ns:xmpp-stanzas'


I guess that's because the bot doesn't reply to our disco query so probably a GTalk bug. I still open this bug to double check with XMPP experts and so we have a better place to discuss it.
Comment 1 Simon McVittie 2012-01-18 01:59:15 UTC
As far as I can see, that's a bug in the bot: it really ought to implement disco#info.

If this bot works with GTalk, that probably means that GTalk is *still* mis-implementing caps by looking at the names of bundles ("voice-v1", etc.) and inferring what the capabilities are from the bundle name, which is meant to be opaque (http://talk.google.com/xmpp/bot/caps#voice-v1 is not necessarily the same thing as http://example.com/#voice-v1, but I suspect GTalk would treat it as if it was).

We could work around this by hard-coding the caps of the bot's URI in the same place we hard-code the caps of known GTalk client versions.
Comment 2 Guillaume Desmottes 2012-01-18 03:15:10 UTC
(In reply to comment #1)
> We could work around this by hard-coding the caps of the bot's URI in the same
> place we hard-code the caps of known GTalk client versions.

Which caps is that? Don't know if it's related but Gabble claims that Android contacts connected using the official gtalk client don't support A/V either.

<presence from="xxxxx@gmail.com/android_talke745182aa103" to="guillaume.desmottes@gmail.com/cb11d944"><status/><priority>24</priority><caps:c node="http://www.android.com/gtalk/client/caps" ext="pmuc-v1 voice-v1 video-v1 camera-v1" ver="1.1" xmlns:caps="http://jabber.org/protocol/caps"/><show>away</show><x xmlns="vcard-temp:x:update"><photo>3fa9e0d462810bf05513c2b701fddacd97e919a1</photo></x></presence>
Comment 3 Guillaume Desmottes 2012-01-18 05:01:42 UTC
(In reply to comment #2)
> (In reply to comment #1)
> > We could work around this by hard-coding the caps of the bot's URI in the same
> > place we hard-code the caps of known GTalk client versions.

I opened bug #44897 about this issue.
Comment 4 Guillaume Desmottes 2012-01-18 06:23:51 UTC
Created attachment 55736 [details] [review]
presence-cache: hardcode gtalk's bot caps

Thanks Google for not implementing disco query on the bot...
Comment 5 Guillaume Desmottes 2012-01-18 06:24:59 UTC
With the above patch, the bot is callable but for some reason my audio/video is not echoed back. This patch is the first step to debug this so worth merging anyway.
Comment 6 Guillaume Desmottes 2012-02-21 03:55:56 UTC
Merged to master; will be in 0.15.4.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.