presence-cache: hardcode gtalk's bot caps

Thanks Google for not implementing disco query on the bot...

https://bugs.freedesktop.org/show_bug.cgi?id=44855